# page_turner

./: .gitignore  environment.yml  pyproject.toml  setup.py
page_turner/: audio_stream.py  automatic_page_turner.py  camera.py  config.py  dialog.py  image_stream.py  prediction.py  utils.py
