[tool.poetry]
name = "page-turner"
version = "0.1.0"
description = ""
authors = ["sytallax <sytallax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cython = "^3.0.10"
matplotlib = "^3.8.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
